test/visibility/submodule-in-file/errors/MissingSubModule/SubModule.chpl
module SubModule {
  writeln("SubModule init");
  var subVar = 10;
  proc subFn() { return 20; }
}
